--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <img class="bg" src="./bg.jpg" alt="" />
+
   <svg id="svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100 100" fill="none">
     <polygon id="popup" fill="#C4C4C4"/>
   </svg>
+
+  <main class="main">
+    <p class="logo">SimbirSoft</p>
+  </main>
 
   <script type="module" src="./index.js"></script>
 </body>
