--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
   </svg>
 
   <main class="main">
-    <p class="logo">SimbirSoft</p>
+    <div class="logo">
+      <div class="line top"></div>
+      <span id="logo-text">SimbirSoft</span>
+      <div class="line bottom"></div>
+    </div>
   </main>
 
   <script type="module" src="./index.js"></script>
