--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       <span id="logo-text">SimbirSoft</span>
       <div class="line bottom"></div>
     </div>
+
+    <div id="dialog">
+      <h1>dsds</h1>
+    </div>
   </main>
 
   <script type="module" src="./index.js"></script>
