--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anima</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <img class="bg" src="./bg.jpg" alt="" />
 
   <svg id="svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100 100" fill="none">
-    <polygon id="popup" fill="#C4C4C4"/>
+    <polygon id="popup" fill="#C4C4C4" />
   </svg>
 
   <main class="main">
@@ -21,10 +24,22 @@
     </div>
 
     <div id="dialog">
-      <h1>dsds</h1>
+      <h1 class="heading">
+        <p>Modern </p>
+        <p>Web Animations</p>
+      </h1>
+
+      <div class="content">
+        <p>Try it yourself</p>
+      </div>
+
+      <p class="company">simbirsoft</p>
+
+      <button class="button">Awesome</button>
     </div>
   </main>
 
   <script type="module" src="./index.js"></script>
 </body>
+
 </html>
